Fixed bug #42937 (__call() method not invoked when methods are called on parent from child class).